docker/go_live/docker-compose/templates/certbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: certbot
  name: certbot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: certbot
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/go-live-default: "true"
        io.kompose.service: certbot
    spec:
      containers:
        - image: certbot
          name: localhost:5000/certbot
          ports:
            - containerPort: 9999
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /letsencrypt
              name: certbot-hostpath0
            - mountPath: /etc/letsencrypt
              name: certbot-hostpath1
      hostname: certbot
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /mnt/c/Users/JohnHupperts/Documents/Programming_Projects/Thesaurus_Rex/docker/letsencrypt
          name: certbot-hostpath0
        - hostPath:
            path: /mnt/c/Users/JohnHupperts/Documents/Programming_Projects/Thesaurus_Rex/docker/letsencrypt/certs
          name: certbot-hostpath1
status: {}
