docker/go_live/docker-compose/templates/waitress-flask-wsgi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: waitress-flask-wsgi
  name: waitress-flask-wsgi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: waitress-flask-wsgi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/go-live-default: "true"
        io.kompose.service: waitress-flask-wsgi
    spec:
      containers:
        - image: waitress-flask-wsgi
          name: waitress-flask-wsgi
          ports:
            - containerPort: 8000
          resources: {}
      hostname: flask
      restartPolicy: Always
status: {}
