docker/go_live/docker-compose/templates/certbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: certbot
  name: certbot
spec:
  ports:
    - name: "9999"
      port: 9999
      targetPort: 9999
  selector:
    io.kompose.service: certbot
status:
  loadBalancer: {}
