docker/go_live/docker-compose/templates/nginx_reverse_proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-reverse-proxy
  name: nginx_reverse_proxy
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 443
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx-reverse-proxy
status:
  loadBalancer: {}
