docker/go_live/docker-compose/templates/waitress_flask_wsgi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml --volumes hostPath -c
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: waitress-flask-wsgi
  name: waitress_flask_wsgi
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: waitress-flask-wsgi
status:
  loadBalancer: {}
