docker/go_live/docker-compose/templates/go-live-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: go-live-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/go-live-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/go-live-default: "true"
